<resources>
    <string name="app_name">SecurEvent</string>
    <string name="MainPage">Events</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="todo">TODO</string>
    <string name="title">Title</string>
    <string name="Events">Events</string>
    <string name="description">Description</string>
    <string name="info">INFORMATION</string>
    <string name="location">Location</string>
    <string name="MaxPrice">Maximum Price</string>
    <string name="mininum_price">Mininum Price</string>
    <string name="hour">Start Hour</string>
    <string name="date">Date</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="MyEvents">My Events</string>
    <string name="Account">Account</string>
    <string name="SignIn">Sign in</string>
    <string name="SignInWithGoogle">Sign in with google</string>
    <string name="SignOut">Sign Out</string>
    <string name="Settings">Settings</string>
    <string name="Language">Change Language</string>
    <string name="BotoEvent">Join Event</string>
    <string name="ButtonGoToPaypal">Buy</string>
    <string name="MessageSignIn">SignIn in order to join Events!</string>
    <string name="MessageInscripcioEvent">Event Joined!</string>
    <string name="SignOutWithGoogle">Sign out!</string>
    <string name="username" translatable="false">username</string>
    <string name="PayPal">PayPal</string>
    <string name="buy">Buy</string>
    <string name="RoomVisualization">Room visualization</string>
    <string name="FullRoom">There are no tickets available, we\'re sorry</string>
    <string name="SeeSeats">See seats</string>
    <string name="ButtonSeeDetails">See availability</string>
    <string name="Scenario">Stage</string>
    <string name="yourseet">Assigned</string>
    <string name="freeseat">Available</string>
    <string name="occseat">Occupied</string>
    <string name="covidseat">Restricted</string>
    <string name="SeeLocation">See Location</string>
    <string name="title_activity_calendar" translatable="false">CalendarActivity</string>
    <string name="title_activity_maps2" translatable="false">Map</string>
    <string name="PastEvents">My Past Events</string>
    <string name="GiveRating">Your rating has been submited</string>
    <string name="LocNotFound">Location not found</string>
    <string name="ButtonShare" >Share event</string>
    <string name="MessageSignIn2" >SignIn in order to share this Event!</string>
    <string name="MessageAssist">Would you like to assist to</string>
    <string name="MessageLoc">at</string>
    <string name="MessageDownload" >To know more about this event, download SecurEvent here:</string>
    <string name="Submit">Submit Rating</string>
    <string name="hourEnd">End Hour</string>
    <string name="YourSeats">Your seats</string>
    <string name="Row">Row</string>
    <string name="Col">Column</string>

</resources>