<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignIN"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="57dp"
    tools:context=".SignIn">


    <LinearLayout
        android:id="@+id/linearL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#293859"
        android:orientation="horizontal"></LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="#293859"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageE"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/NomUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageE"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/MailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/NomUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_marginTop="200dp"
            android:id="@+id/LinearLayoutLocalitzacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"

            >
        <Button
            android:id="@+id/google_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/google_logo"
            android:drawablePadding="15dp"
            android:text="@string/SignInWithGoogle"
            android:textSize="15sp" />


        </LinearLayout>

        <Button
            android:id="@+id/google_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/LinearLayoutLocalitzacio"
            android:layout_gravity="center"
            android:text="@string/SignOutWithGoogle"
            android:textSize="15sp"
            android:visibility="invisible" />

    </RelativeLayout>


</RelativeLayout>