<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@color/white"
    android:padding="5dp"
    tools:context=".EventDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/LinearLayoutLocalitzacio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Scenario"
                android:textSize="26sp" />

            <GridView
                android:id="@+id/grid"
                android:layout_width="match_parent"
                android:layout_height="386dp"
                android:layout_gravity="center" />

            <GridLayout
                android:id="@+id/numSeatsWrapper"
                android:layout_width="wrap_content"
                android:layout_height="78dp"
                android:layout_marginTop="5dp">


                <EditText
                    android:id="@+id/numTickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="Number of tickets"
                    android:ems="5"
                    android:enabled="false"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="0"
                    android:textColor="@color/black"
                    app:layout_column="0"
                    app:layout_row="0"
                    tools:ignore="LabelFor" />

                <Button
                    android:id="@+id/plusTickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:onClick="increment"
                    android:text="+" />

                <Button
                    android:id="@+id/minusTickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:onClick="decrement"
                    android:text="-" />

            </GridLayout>

            <GridLayout
                android:id="@+id/legend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/seatUser"
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_user_seat" />

                <TextView
                    android:text="@string/yourseet"
                    />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_free_seat" />

                <TextView
                    android:text="@string/freeseat"
                    />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_occ_seat" />

                <TextView
                    android:text="@string/occseat"
                    />


                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="30dp"
                    android:src="@mipmap/ic_seat" />

                <TextView
                    android:text="@string/covidseat"
                    />

            </GridLayout>

            <Button
                android:id="@+id/googlePayButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="buy"
                android:text="@string/buy" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>