<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SignIN"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="57dp"
    tools:context=".Acc">


    <LinearLayout
        android:id="@+id/linearL"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageE"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/NomUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageE"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/MailUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/NomUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="@color/teal_200"
            android:textSize="18sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/google_logout_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/MailUser"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/SignOutWithGoogle"
            android:textSize="15sp"
            android:visibility="invisible" />

    </RelativeLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutLocalitzacio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@color/blue_app"
            >

            <ImageView
                android:id="@+id/imageViewGoogle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:src="@drawable/google_logo" />


            <Button
                android:id="@+id/google_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="82dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:text="@string/SignInWithGoogle"
                android:textColor="@color/black"
                android:textSize="20sp" />


        </LinearLayout>


</RelativeLayout>