<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"

        tools:context=".MyEsdeveniment">

        <ImageView
            android:id="@+id/imageE"
            android:layout_width="157dp"
            android:layout_height="135dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleE"
            android:text="@string/title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_below="@id/imageE"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            />


        <LinearLayout
            android:id="@+id/LinearLayoutShare"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleE"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:id="@+id/buttonShare"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:onClick="share"
                android:src="@drawable/ic_share"
                android:text="@string/ButtonShare" />

            <ImageView
                android:id="@+id/iconMaps"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:onClick="goToMaps"
                android:src="@drawable/ic_location_foreground"/>

            <ImageView
                android:id="@+id/iconSeats"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_gravity="center_horizontal"
                android:onClick="goToRoomVisualization"
                android:src="@drawable/ic_seat_foreground"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/IDE"
            android:text="@string/description"
            android:textSize="18sp"
            android:textColor="@color/teal_200"
            android:gravity="center"
            android:layout_below="@id/LinearLayoutShare"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LabelInfo"
            android:text="@string/info"
            android:textSize="20sp"
            android:textColor="@color/teal_200"
            android:gravity="center"
            android:layout_below="@id/LinearLayoutShare"
            android:layout_centerHorizontal="true"
            />

        <LinearLayout
            android:layout_marginTop="15dp"
            android:id="@+id/LinearLayoutLocalitzacio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/LabelInfo">

            <TextView
                android:id="@+id/LocTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:layout_marginRight="20dp"
                android:text="@string/location"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/LocE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:textColor="@color/grey"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:id="@+id/LinearLayoutData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/LinearLayoutLocalitzacio">

            <TextView
                android:id="@+id/DateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:layout_marginRight="20dp"
                android:text="@string/date"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/DateE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:textColor="@color/grey"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:id="@+id/LinearLayoutHora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/LinearLayoutData">

            <TextView
                android:id="@+id/HourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:layout_marginRight="20dp"
                android:text="@string/hour"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/HourE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:textColor="@color/grey"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:id="@+id/LinearLayoutHoraFinal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/LinearLayoutHora">

            <TextView
                android:id="@+id/HourFinalTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:layout_marginRight="20dp"
                android:text="@string/hourEnd"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/HourEnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:textColor="@color/grey"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="15dp"
            android:id="@+id/LinearLayoutSeats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/LinearLayoutHoraFinal">

            <TextView
                android:id="@+id/SeatsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:layout_marginRight="20dp"
                android:text="@string/YourSeats"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginEnd="20dp" />

            <TextView
                android:id="@+id/Seats"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="start"
                android:textColor="@color/grey"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>